footer section is pending

--- a/volvo/index.html
+++ b/volvo/index.html
@@ -29,15 +29,52 @@
             <div id="curosel">
                 <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/Volvo-EX90-carousel-960x1178?qlt=82&wid=768&ts=1670318698149&dpr=off&fit=constrain" alt="">
                 <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/carousel-trucks?qlt=82&wid=768&ts=1663246594992&dpr=off&fit=constrain" alt="">
-                <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/carousel-vce?qlt=82&wid=768&ts=1624536727398&dpr=off&fit=constrain" alt="">
-        
+                <img class="hide" src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/carousel-vce?qlt=82&wid=768&ts=1624536727398&dpr=off&fit=constrain" alt="">
+                <img class="hide" src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/Volvo-EX90-carousel-960x1178?qlt=82&wid=768&ts=1670318698149&dpr=off&fit=constrain" alt="">
+                <img class="hide" src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/carousel-trucks?qlt=82&wid=768&ts=1663246594992&dpr=off&fit=constrain" alt="">
+                <img class="hide" src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/carousel-vce?qlt=82&wid=768&ts=1624536727398&dpr=off&fit=constrain" alt="">
             </div>
             <div id="arrow-slides">
-                <i class="ri-arrow-left-s-line"></i>
-                <i class="ri-arrow-right-s-line"></i>
+                <i class="ri-arrow-left-s-line prev"></i>
+                <i class="ri-arrow-right-s-line next"></i>
                 <hr>
             </div>
         </div>
+        <div id="page-2">
+            <video controls>
+                <source src="https://assets.volvo.com/is/content/VolvoInformationTechnologyAB/volvo-brand-film-0x360-730k" type="video/mp4">
+              </video>
+        </div>
+        <div id="page-3">
+            <div id="left-side">
+                <h6>CAREER</h6>
+                <h3>For every person who wants to make real difference</h3>
+                <button>Join Volvo Group</button>
+                <button>Join Volvo Group</button>
+            </div>
+            <div id="right-side">
+                <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/join-us-banner?qlt=82&wid=768&ts=1624538498965&dpr=off&fit=constrain" alt="">
+            </div>
+        </div>
+
+        <div id="page-4">
+                <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/Banner_volvo.com_volvomuseum?qlt=82&wid=768&ts=1669034086577&dpr=off&fit=constrain" alt="">
+                <img  class="special-img" src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/Banner_volvo.com_wow?qlt=82&wid=768&ts=1669043999689&dpr=off&fit=constrain" alt="">
+
+        </div>
+        <div id="page-5">
+            <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/lifestyle?qlt=82&wid=768&ts=1629721303777&dpr=off&fit=constrain" alt="">
+            <div id="text-container">
+                <h6>LIFESTYLE COLLECTIONS</h6>
+                <h3>Designed and distributed with care</h3>
+                <button>Volvo Group shop</button>
+                <button>Volvo Cars shop</button>
+            </div>
+        </div>
+        <div id="footer">
+
+        </div>
+
     </div>
 
     <script src="./script.js"></script>
