project responisve layout is finished

--- a/volvo/index.html
+++ b/volvo/index.html
@@ -72,6 +72,24 @@
             </div>
         </div>
         <div id="footer">
+            <div id="section-One">
+                <h6>VOLVO GROUP</h6>
+                <h4>About Volvo Group</h4>
+                <h4>Future of transportation</h4>
+                <h4>Careers</h4>
+                <h4>News & media</h4>
+                <h4>Contact us</h4>
+            </div>
+            <div id="section-Two">
+                <h6>VOLVO CARS</h6>
+                <h4>Our cars</h4>
+                <h4>About Volvo Cars</h4>
+                <h4>Sustainability</h4>
+                <h4>Careers</h4>
+                <h4>Newsroom</h4>
+                <h4>Contact us</h4>
+                <h4>Support</h4>
+            </div>
 
         </div>
 
